deployments/k8s/nc-test/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nc-test
  labels:
    app.kubernetes.io/part-of: nc
    app.kubernetes.io/environment: test
