deployments/k8s/nc-test/celery.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-default
  namespace: nc-test
  labels:
    app: celery-default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery-default
  template:
    metadata:
      labels:
        app: celery-default
    spec:
      containers:
        - name: worker
          image: nc-django-app:test
          imagePullPolicy: IfNotPresent
          command:
            - /bin/bash
            - -c
            - >
              sleep 15 &&
              celery -A core.celery worker -Q default --loglevel=info --concurrency=1
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 1Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-import
  namespace: nc-test
  labels:
    app: celery-import
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery-import
  template:
    metadata:
      labels:
        app: celery-import
    spec:
      containers:
        - name: worker
          image: nc-django-app:test
          imagePullPolicy: IfNotPresent
          command:
            - /bin/bash
            - -c
            - >
              sleep 15 &&
              celery -A core.celery worker -Q import --loglevel=info --concurrency=1
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 1Gi
